# DAG-SCARP

./: .gitignore  CMakeLists.txt
cmake/: FindGurobi.cmake
dataset/instances/: data_0.05_0.01_hilbert_0_0.5.csv  data_0.05_0.01_hilbert_1_0.25.csv  data_0.05_0.01_hilbert_2_0.125.csv  data_0.05_0.01_hilbert_3_0.0625.csv  data_0.05_0.01_hilbert_4_0.03125.csv  data_0.05_0.01_hilbert_5_0.015625.csv  data_0.05_0.01_hilbert_6_0.0078125.csv  data_0.05_0.01_sweep_1_0.25.csv  data_0.05_0.01_sweep_4_0.03125.csv  data_0.05_0.01_sweep_5_0.015625.csv  data_0.05_0.01_sweep_6_0.0078125.csv  data_0.05_0.04_hilbert_0_0.5.csv  data_0.05_0.04_hilbert_1_0.25.csv  data_0.05_0.04_hilbert_2_0.125.csv  data_0.05_0.04_hilbert_3_0.0625.csv  data_0.05_0.04_hilbert_4_0.03125.csv  data_0.05_0.04_hilbert_5_0.015625.csv  data_0.05_0.04_hilbert_6_0.0078125.csv  data_0.05_0.04_sweep_0_0.5.csv  data_0.05_0.04_sweep_1_0.25.csv  data_0.05_0.04_sweep_2_0.125.csv  data_0.05_0.04_sweep_3_0.0625.csv  data_0.05_0.04_sweep_4_0.03125.csv  data_0.05_0.04_sweep_5_0.015625.csv  data_0.05_0.04_sweep_6_0.0078125.csv  data_0.05_0.16_hilbert_0_0.5.csv  data_0.05_0.16_hilbert_1_0.25.csv  data_0.05_0.16_hilbert_2_0.125.csv  data_0.05_0.16_hilbert_3_0.0625.csv  data_0.05_0.16_hilbert_4_0.03125.csv  data_0.05_0.16_hilbert_5_0.015625.csv  data_0.05_0.16_hilbert_6_0.0078125.csv  data_0.05_0.16_sweep_0_0.5.csv  data_0.05_0.16_sweep_1_0.25.csv  data_0.05_0.16_sweep_2_0.125.csv  data_0.05_0.16_sweep_3_0.0625.csv  data_0.05_0.16_sweep_4_0.03125.csv  data_0.05_0.16_sweep_5_0.015625.csv  data_0.05_0.16_sweep_6_0.0078125.csv  data_0.05_0.64_hilbert_0_0.5.csv  (+27 more)
dataset/tests/: data_0.05_0.01_sweep_0_0.5.csv  data_0.05_0.01_sweep_2_0.125.csv  data_0.05_0.01_sweep_3_0.0625.csv  instances.csv
src/main/: CMakeLists.txt  cmp.hh  control_reader.cc  control_reader.hh  control_writer.cc  control_writer.hh  controls.cc  controls.hh  cost_function.cc  cost_function.hh  dag_exact_scarp_batch_solver.cc  dag_exact_scarp_solver.cc  dag_mip_batch_solver.cc  dag_mip_solver.cc  dag_program.cc  dag_program.hh  dag_scarp_batch_solver.cc  dag_scarp_solver.cc  dag_sur_batch_solver.cc  dag_sur_solver.cc  defs.hh.in  grid.cc  grid.hh  point.hh  util.hh
src/main/exact_scarp/: exact_label.cc  exact_label.hh  exact_program.cc  exact_program.hh
src/main/graph/: graph.cc  graph.hh
src/main/scarp/: scarp_label.hh  scarp_program.cc  scarp_program.hh
src/main/sur/: sur.cc  sur.hh
src/test/: CMakeLists.txt  dag_exact_scarp_test.cc  dag_mip_test.cc  dag_scarp_test.cc  dag_sur_test.cc  test_fixture.cc  test_fixture.hh
